--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,40 @@
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
     </script>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <h1>Dystic</h1>
+    <br />
+
+    <section id="NotSignedIn">
+      <button id="signInBtn" class="btn btn-primary">
+        Sign in with Google
+      </button>
+    </section>
+
+    <section id="SignedInState" hidden="true">
+      <div class="user-details"></div>
+      <button id="signOutBtn" class="btn btn-primary">Sign Out</button>
+    </section>
+
     <script src="../app.js" defer></script>
   </body>
 </html>
