saved jobs database is real time deployed

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,15 @@
       <button id="signOutBtn" class="btn btn-primary">Sign Out</button>
     </section>
 
+    <section hidden="true" id="saved-jobs-section">
+      <form>
+        <input type="text" name="" id="newJobtxt" placeholder="Job Title" />
+        <input type="button" value="Add" id="addJobBtn" />
+      </form>
+      <h3>Saved Jobs</h3>
+      <ul id="saved-jobs"></ul>
+    </section>
+
     <script src="app.js"></script>
   </body>
 </html>
