added signout confirmation message

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <style>
+      * {
+        font-family: 'Poppins', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <h1>Dystic</h1>
