--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,12 @@
     <section hidden="true" id="saved-jobs-section">
       <form>
         <input type="text" name="" id="newJobtxt" placeholder="Job Title" />
-        <input type="button" value="Add" id="addJobBtn" />
+        <input
+          type="button"
+          value="Add"
+          id="addJobBtn"
+          class="btn btn-success"
+        />
       </form>
       <h3>Saved Jobs</h3>
       <ul id="saved-jobs"></ul>
