--- a/public/index.html
+++ b/public/index.html
@@ -72,15 +72,14 @@
     </section>
 
     <section hidden="true" id="saved-jobs-section">
-      <form>
-        <input type="text" name="" id="newJobtxt" placeholder="Job Title" />
-        <input
-          type="button"
-          value="Add"
-          id="addJobBtn"
-          class="btn btn-success"
-        />
-      </form>
+      <input type="text" name="" id="newJobtxt" placeholder="Job Title" />
+      <input type="button" value="Add" id="addJobBtn" class="btn btn-success" />
+      <input
+        type="button"
+        value="Remove"
+        id="rmJobBtn"
+        class="btn btn-danger"
+      />
       <h3>Saved Jobs</h3>
       <ul id="saved-jobs"></ul>
     </section>
